--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,6 +7,8 @@
       <title>Document</title>
 </head>
 <body>
+      <h1>Prove inserimento javascript</h1>
+      <span id="name"></span>
       
 
 
