--- a/bonus/index.html
+++ b/bonus/index.html
@@ -9,8 +9,14 @@
 <body>
       <h1>Prove inserimento javascript</h1>
       <span id="name"></span>
-      
 
+            <span>ripetizione prova anno di nascita</span>
+
+            <div id="age-result"></div>
+
+
+      
+<!-- parziale - da portare avanti -->
 
 
       <script type="text/javascript" src="js/script.js"></script>
